# 0x2048

./: CMakeLists.txt  Doxyfile  README.md
cmake/: FindSDL2TTF.cmake
include/: core.h  game.h  styles.h
src/: CMakeLists.txt  core.c  game.c
